--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+body {
+  font-family: 'Inter', sans-serif;
+}
+
+* {
+  font-family: 'Inter', sans-serif;
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +43,18 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.text-gray {
+  color: #636161;
+}
+
+.servicio-card {
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.servicio-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
 }
